--- a/core/src/main/res/values/colors.xml
+++ b/core/src/main/res/values/colors.xml
@@ -45,6 +45,7 @@
     <color name="logo_primary">#FF3DDC84</color>
     <color name="logo_secondary">#FF00A4DC</color>
 
-    <color name="item_action_played">#038043</color>
+    <color name="item_rating">#F2C94C</color>
+    <color name="item_action_played">#069A52</color>
     <color name="item_action_favorite">#EB5757</color>
 </resources>
