--- a/app/phone/src/main/res/layout/episode_bottom_sheet.xml
+++ b/app/phone/src/main/res/layout/episode_bottom_sheet.xml
@@ -128,37 +128,23 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="4dp"
         android:layout_marginEnd="24dp"
+        android:gravity="center_vertical"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="@id/episode_image"
         app:layout_constraintTop_toBottomOf="@id/barrier">
 
-        <TextView
-            android:id="@+id/year"
+        <include
+            android:id="@+id/metadata"
+            layout="@layout/item_metadata"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginEnd="8dp"
-            android:textAppearance="@style/TextAppearance.Material3.BodyMedium"
-            tools:text="4/6/2013" />
+            android:layout_height="wrap_content" />
 
         <TextView
-            android:id="@+id/playtime"
+            android:id="@+id/size_dot"
+            style="@style/ThemeX.ItemDetailsSeparator"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="8dp"
-            android:textAppearance="@style/TextAppearance.Material3.BodyMedium"
-            tools:text="26 min" />
-
-        <TextView
-            android:id="@+id/community_rating"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:drawablePadding="4dp"
-            android:gravity="bottom"
-            android:layout_marginEnd="8dp"
-            android:textAppearance="@style/TextAppearance.Material3.BodyMedium"
-            app:drawableStartCompat="@drawable/ic_star_filled"
-            app:drawableTint="@color/item_rating"
-            tools:text="8.8" />
+            android:visibility="gone" />
 
         <TextView
             android:id="@+id/size"
